--- a/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeEdit.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeEdit.cshtml
@@ -11,7 +11,12 @@
     @if (info != null)
     {
         <tr>
+            <td class="hide">finishGoodProductId</td>
+            <td class="hide" data-val-finishGoodProductId="@info.FinishGoodProductId" id="finishGoodProductId" >@info.FinishGoodProductId</td>
+            <td class="hide" id="finishGoodRecipeInfoId" data-val-finishGoodRecipeInfoId="@info.FGRId"></td>
+
             <td style="width:13%">Product Name</td>
+
             @*<td style="width:15%"><input type="text" placeholder="Qty" name="quantity" id="txtProductQty" class="form-control form-control-sm" dataval="@info.FinishGoodProductName" /> </td>*@
             <td style="width:15%"><b>@info.FinishGoodProductName</b></td>
             <td style="width:18%">Product Qty</td>
@@ -21,7 +26,7 @@
         </tr>
     }
 </table>
-<table class="table table-bordered table-striped table-sm table-responsive-lg text-sm" id="tblReturnItems">
+<table class="table table-bordered table-striped table-sm table-responsive-lg text-sm" id="tblFinishGoodReceip">
     <thead class="thead-dark">
         <tr class="text-center">
             <th>RawMaterial Name</th>
@@ -34,13 +39,14 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+        <tr>
+            <td class="hide">@item.FGRDetailsId</td>
+            <td class="text-center">@item.RawMaterialName</td>
 
-                <td class="text-center">@item.RawMaterialName</td>
-                <td class="form-control form-control text-center text-bold" id="txtFGRRawMaterQty" contenteditable='true'>@item.FGRRawMaterQty</td>
-                <td class="text-center">@item.FGRRawMaterUnit</td>
+            <td class="form-control form-control text-center text-bold" id="txtFGRRawMaterQty" contenteditable='true'>@item.FGRRawMaterQty</td>
+            <td class="text-center">@item.FGRRawMaterUnit</td>
 
-            </tr>
+        </tr>
         }
     </tbody>
 </table>
@@ -64,27 +70,28 @@
 
     $("#btnSubmit").click(function (e) {
             debugger
-            e.preventDefault();
+        e.preventDefault();
+        var finishGoodRecipeInfoId = $("#finishGoodRecipeInfoId").attr("data-val-finishGoodRecipeInfoId");
+ 
+        //console.log("finishGoodProductId :" + JSON.stringify(finishGoodProductId));
+        
             if (true === true) {
 
-                bootbox.confirm("Are you sure you want to Save this Recipe", function (result) {
+                bootbox.confirm("Are you sure you want to Update this Recipe", function (result) {
                     if (result) {
                         debugger;
                         //disable("#btnSubmit");
                         //getTargetItemAndItemTypeAndWarehouse();
-                        var info = { FGRId: 0, FinishGoodProductId: txtFGRRawMaterQty.val(), FGRQty: txtFGRRawMaterQty.val(), FGRUnit: ddlProductunit.val(), RawMaterialId: TryParseInt(ddlRawMaterialName.val(), 0), FGRRawMaterQty: txtRawMaterialQty.val(), FGRRawMaterUnit: ddlRawMaterialunit.val() };
+                        var info = { FGRId: TryParseInt(finishGoodRecipeInfoId,0)};
 
                         var details = [];
-                        details.length = 0;
+                       // details.length = 0;
 
-                        $.each($("#tblList tbody tr"), function (index, item) {
+                        $.each($("#tblFinishGoodReceip tbody tr"), function (index, item) {
                             var tds = $(this).children('td');
                             details.push({
-                                FGRDetailsId: 0,
-                                RawMaterialId: tds.eq(5).html(),
+                                FGRDetailsId: tds.eq(0).html(),
                                 FGRRawMaterQty: tds.eq(2).html(),
-                                FGRRawMaterUnit: tds.eq(3).html()
-
                             });
                         })
 
@@ -97,9 +104,9 @@
                         $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveFinishGoodRecipe', data, getToken())).then(function (res, status) {
                             if (res === true) {
                                 $('.toastrDefaultSuccess').trigger('click');
-                                @* setTimeout(function () {
-                                    redirectPage('@Url.Action("GetItemPreparation")');
-                                }, 1000);*@
+                                 setTimeout(function () {
+                                    redirectPage('@Url.Action("GetFinishGoodRecipeList")');
+                                }, 1000);
                                 //resetUI();
                             }
                             else {
@@ -113,6 +120,10 @@
                     }
                 })
             }
-        })
+    })
+
+    function redirectPage(page) {
+        window.location.replace(page);
+    }
 </script>
 
