--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockList.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "_GetRawMaterialStockList";
     var sl = 0;
+    var privilege = (ERPBO.Common.UserPrivilege)ViewBag.UserPrivilege;
 }
 <table class="table table-bordered table-sm table-striped table-responsive-lg text-sm" id="tblRawMaterialStockList">
     <thead class="btn-dark">
