--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterialStock.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterialStock.cshtml
@@ -51,7 +51,7 @@
                                             <div class="col-md-3">
                                                 <label for="ddlRawMaterialName" class="control-label">Raw Material Name</label>
 
-                                                @Html.DropDownList("ddlRawMaterialName", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterialName, "--Select Material--", new { @class = "form-control form-control-sm" })
+                                                @*@Html.DropDownList("ddlRawMaterialName", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterialName, "--Select Material--", new { @class = "form-control form-control-sm" })*@
                                             </div>
 
                                         </div>
@@ -125,7 +125,7 @@
     }
 
     function LoadDetails() {
-        var data = { flag: "view", RawMaterialId: TryParseInt(ddlRawMaterialName.val(), 0), id: 0 };
+        var data = { flag: "view", rawMaterialId: TryParseInt(ddlRawMaterialName.val(), 0), id: 0 };
 
         $.when(getReqWithData('html', 'GET', '/AgroConfiguration/GetRawMaterialStock', data)).then(function (res, status) {
             console.log(status);
