--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockEdit.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockEdit.cshtml
@@ -10,6 +10,11 @@
     @if (info != null)
     {
     <tr>
+        <td class="hide">RawMaterialId</td>
+        <td class="hide" data-val-rawMaterialId="@info.RawMaterialId" id="rawMaterialId">@info.RawMaterialId</td>
+
+        <td class="hide" id="rawMaterialInfoId" data-val-rawMaterialInfoId="@info.RawMaterialStockId"></td>
+
         <td style="width:13%">Raw Material Name</td>
         <td style="width:15%"><b>@info.RawMaterialName</b></td>
         <td style="width:18%">Quantity</td>
@@ -37,6 +42,7 @@
             <tr>
 
                 <td class="text-center">@sl</td>
+                <td class="hide">@item.RawMaterialStockDetailId</td>
                 <td class="text-center">@item.RawMaterialName</td>
                 <td class="form-control form-control text-center text-bold" id="RawMaterialUpdateQty" contenteditable='true'>@item.Quantity</td>
                 <td class="text-center">@item.Unit</td>
@@ -47,7 +53,7 @@
 </table>
 <div class="modal-footer">
     <button type="button" data-dismiss="modal" class="btn btn-sm btn-flat btn-danger">Cancel</button>
-    <button type="button" id="saveButton" class="btn btn-sm btn-flat btn-success">Update</button>
+    <button type="button" id="UpdateButton" class="btn btn-sm btn-flat btn-success">Update</button>
 </div>
 
 
@@ -55,25 +61,34 @@
 
     var RawMaterialUpdateQty = $("#RawMaterialUpdateQty");
 
-    $("#saveButton").click(function (e) {
+    $("#UpdateButton").click(function (e) {
         e.preventDefault();
         debugger;
+
+        var rawMaterialInfoId = $("#rawMaterialInfoId").attr("data-val-rawMaterialInfoId");
         //if (true) {
         //bootbox.confirm("Are you sure you want to Save Database", function (result) {
         //    if (result) {
-        var info = { RawMaterialStockId: 0, OrganizationId: ddlOrganizationName.val(), RawMaterialId: ddlRawMaterialName.val(), Quantity: ddlQuantity.val(), Unit: ddlUnit.val() };
+        //var info = { RawMaterialStockId: 0, OrganizationId: ddlOrganizationName.val(), RawMaterialId: ddlRawMaterialName.val(), Quantity: ddlQuantity.val(), Unit: ddlUnit.val() };
+
+        //var details = [];
+        //details.length = 0;
+
+        var info = { RawMaterialStockId: TryParseInt(rawMaterialInfoId, 0) };
 
         var details = [];
-        details.length = 0;
 
-        $.each($("#tblSingleItems tbody tr"), function (index, item) {
+        $.each($("#tblReturnItems tbody tr"), function (index, item) {
             var tds = $(this).children('td');
             details.push({
 
-                RawMaterialStockDetailId: 0,
-                RawMaterialId: tds.eq(5).html(),
-                Quantity: tds.eq(3).html(),
-                Unit: tds.eq(2).html(),
+                RawMaterialStockDetailId: tds.eq(1).html(),
+                Quantity: tds.eq(3).html()
+
+                //RawMaterialStockDetailId: 0,
+                //RawMaterialId: tds.eq(5).html(),
+                //Quantity: tds.eq(3).html(),
+                //Unit: tds.eq(2).html(),
 
             });
         })
@@ -85,21 +100,26 @@
         $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveRawMaterialStock', data, getToken())).then(function (res, status) {
             if (res === true) {
                 $('.toastrDefaultSuccess').trigger('click');
-
+                setTimeout(function () {
+                redirectPage('@Url.Action("GetRawMaterialStock")');
+                }, 1000);
             }
             else {
                 $('.toastrDefaultError').trigger('click');
             }
-            enable("#saveButton");
+            enable("#UpdateButton");
         }).fail(function (error) {
             alert(execuStatus.fail);
-            enable("#saveButton");
+            enable("#UpdateButton");
         })
         //}
         //})
         //}
     })
 
+    function redirectPage(page) {
+        window.location.replace(page);
+    }
    
 </script>
 
